--- a/package.json
+++ b/package.json
@@ -13,8 +13,14 @@
         "prepare": "husky"
     },
     "dependencies": {
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "lucide-react": "^0.469.0",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "react-router-dom": "^7.1.1",
+        "tailwind-merge": "^2.6.0",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@commitlint/cli": "19.2.0",
@@ -23,15 +29,19 @@
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
+        "@types/react-router-dom": "^5.3.3",
         "@vitejs/plugin-react": "^4.3.4",
+        "autoprefixer": "^10.4.20",
         "eslint": "^9.17.0",
         "eslint-plugin-react-hooks": "^5.0.0",
         "eslint-plugin-react-refresh": "^0.4.16",
         "globals": "^15.14.0",
         "husky": "^9.1.7",
         "lint-staged": "^15.2.10",
+        "postcss": "^8.4.49",
         "prettier": "^3.3.3",
         "pretty-quick": "4.0.0",
+        "tailwindcss": "^3.4.17",
         "typescript": "~5.6.2",
         "typescript-eslint": "^8.18.2",
         "vite": "^6.0.5"
