--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
         "prepare": "husky"
     },
     "dependencies": {
+        "@radix-ui/react-checkbox": "^1.1.3",
+        "@radix-ui/react-slot": "^1.1.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
         "lucide-react": "^0.469.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
@@ -44,6 +47,7 @@
         "tailwindcss": "^3.4.17",
         "typescript": "~5.6.2",
         "typescript-eslint": "^8.18.2",
-        "vite": "^6.0.5"
+        "vite": "^6.0.5",
+        "vite-plugin-svgr": "^4.3.0"
     }
 }
